--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -2,6 +2,7 @@
 $body-font-color: #000000;
 $profile-green-color: #56bb21;
 $card-violet-color: #a70dff;
+$white-color: #ffffff;
 
 // font-family
 $base-font-size: 16;
@@ -12,7 +13,6 @@ $body-font-family: 'Roboto', sans-serif;
 $normal-font-weight: 400;
 $light-font-weight: 300;
 $medium-font-weight: 500;
-$bold-font-weight: 700;
 
 // define border radius
 $base-border-radius: 5px;
