--- a/css/index.css
+++ b/css/index.css
@@ -306,6 +306,12 @@ body {
   .profile-card-wrapper--cta-wrapper .free-credits-info {
     margin-bottom: 10px;
     text-align: center;
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
+    -webkit-justify-content: center;
+    align-items: center;
+    -webkit-align-items: center;
   }
 }
 .profile-card-wrapper--cta-wrapper .free-credits-info h4 {
@@ -344,6 +350,12 @@ body {
     right: 0;
     transform: translateX(100%);
     -webkit-transform: translateX(100%);
+  }
+}
+@media (max-width: 439.8px) {
+  .profile-card-wrapper--cta-wrapper .free-credits-info h4 {
+    margin-bottom: 0;
+    margin-right: 15px;
   }
 }
 .profile-card-wrapper--cta-wrapper .profile-button {
